E2E and pedestrian tracking

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,86 @@
+
+@article{chib24:its-e2e,
+  author =       {Chib, Pranav Singh and Singh, Pravendra},
+  title =        {Recent Advancements in End-to-End Autonomous Driving using
+                  DeepLearning: A Survey},
+  journal =      {IEEE Transactions on INtelligent Vehicles},
+  year =         2024,
+  volume =       9,
+  number =       1,
+  pages =        {103--118},
+  month =        {Jan}
+}
+
+@misc{10.1016/j.cosrev.2020.100338,
+  year =         {2021},
+  title =        {{Real-time 3D reconstruction techniques applied in dynamic
+                  scenes: A systematic literature review}},
+  author =       {Ingale, Anupama K. and J., Divya Udayan},
+  url =
+                  {https://pdf.sciencedirectassets.com/276226/1-s2.0-S1574013720X00050/1-s2.0-S157401372030438X/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjEIL\%2F\%2F\%2F\%2F\%2F\%2F\%2F\%2F\%2F\%2FwEaCXVzLWVhc3QtMSJGMEQCIFNCzBE0zCA6TgJj2cbsc0\%2BMS\%2FSWuNxkmT9JPnzXcVyeAiASgQSc\%2F98WtmTKj2\%2B8ELBngzhJLi2wHksIihLNRMPdoSqzBQhKEAUaDDA1OTAwMzU0Njg2NSIMPjiVX9c9amOpc88FKpAFgyP6kAXEZaBfEgUi8VfQgmiFXbohhNVOAzKAnofVWpKc7\%2BxZwd6Concuq2nkNM\%2BrVkCuFSS\%2FVCq1NEr78\%2BrgK0rH5OiMkInue6Jp2\%2FuMgRM5u2hbapi4u84fnClI31dZQmRrLZt\%2FF0CGcyS17X3SY8sQlaZFNAqryKBJiioIXJij61zaoVU5O\%2BtWZkimHqbpwl3QBkw9h1tPh3\%2FTYiG7dUaehtDa450x\%2FZmyGYd2SOmpGaTdt9dlZ0y0prdYetp\%2BOy6Gx3rYJBepg0eUQpiYfrvzgM4ohRgBIr\%2BzdGlW9VlKxzthq4rpNq5br3qoWKsx9oXAGO57wdYj6b7kmOO6z8ibdP6YSUo\%2BgWYllYbu8A21qPQncWwcZcSSgdko2H2dTP00B\%2Bjjwen\%2BuLxQ7DP\%2BRF5oIMH3n59pX6rXzNBLsAtGtxGkekcIFPGTnVgpEX2R\%2B4vVb\%2BHXI9\%2FYy3kuBIyWEMb9RuPN2bRSajdTiP4LqtoaA3uNYwGoNZp0bY4uAeIEAJsfFXU3D\%2BpdHsRE2UqcLUS4n\%2F\%2FcBBjN4WROJsx8Y39hBFMUEPbxZfRkRZdYQm1Y\%2B8BV87MQY0scJkTgw3c6HbngD4KuvlMp\%2F8JeP5k7nWDjzH\%2FkzHz3GEA3W\%2BEoWoFTB3mMhthkd5kAPOEUbMXN\%2FTvauab5Eg\%2F2waQ3d6\%2Fi\%2FiMu0pL3b09xYvwMXv2tLCA2BUhOj8dwJZMEuzICMYK\%2Fo\%2FcuFQCBnZ2\%2FxnAFnis6bvIcJ6j32Jr18L5ilzyFo0gAS1iT0uCZpqKe\%2BAOUse9uwOF6aJ0ACp4Rm1r1WYie5fSLedwvlk8yltZkakUsIAfHfSKea6ISA5XWC\%2B9s4Ha3iCDImqhe8PUNnwj1vhKLqIIwyf\%2B6tAY6sgGHalxW2rKu2Rp\%2B93QDWme3O93orjeLZJpKGvueWCmgoOiBnMpuFd7HvbZQcilpo4KD8E46Y\%2BvClWosdJZCLDkFfwKIBYXPocj5LPTyQS\%2FcW076WesQtR\%2F67w1orMW5BTRJzy0OnaYiI3IflSJT8GELmi\%2BFr9\%2BM8Q9NmdHriKiBaJrAiKSJBOd\%2BCw02B5DdQlIAIoSlC7PAhxOH\%2FK76XE7apUQnsIV2i5qUznWslteTzSPl\&X-Amz-Algorithm=AWS4-HMAC-SHA256\&X-Amz-Date=20240710T172100Z\&X-Amz-SignedHeaders=host\&X-Amz-Expires=300\&X-Amz-Credential=ASIAQ3PHCVTYSUMPK5PY\%2F20240710\%2Fus-east-1\%2Fs3\%2Faws4\_request\&X-Amz-Signature=1710ba3327c43638c4c84b5ca09b641469aa62b0d789d8c696e3fcc9a929f6d1\&hash=3124d24df169d6749db47c7fb44a9683c6d993de993f6a6aac292dd6aac15fa5\&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61\&pii=S157401372030438X\&tid=spdf-bc3b55a6-b724-4e2b-b86e-b672266cdd53\&sid=f974ee13294b97496b1b0278e1814dd2f4d9gxrqa\&type=client\&tsoh=d3d3LnNjaWVuY2VkaXJlY3QuY29t\&ua=16165b0356565c0057\&rr=8a123a48ca512b60\&cc=us},
+  urldate =      {2024-07-10},
+  abstract =     {{Background: Recent developments in capturing devices like
+                  kinect, Intel real sense camera etc., has impelled research in
+                  3D reconstruction especially in the dynamic scene and the
+                  performance in terms of both reconstruction quality and speed
+                  has increased and thus, have supported many application like
+                  teleportation, gaming, free view point video, CG films etc.
+                  This paper provides systematic literature review of 3D
+                  reconstruction techniques applied in dynamic scene. The
+                  objective of this systematic literature review is to provide
+                  the detail technical progress in 3D reconstruction techniques
+                  for dynamic scene and to find the research gap in this field.
+                  Purpose: This paper presents a systematic literature review of
+                  the current state of the art that focuses on 3D reconstruction
+                  of non-rigid object, articulated motion and human performance
+                  in real-time. We further discuss the limitations of current
+                  methods and emphasize promising technologies for future
+                  development. Methods: Search was conducted on five databases
+                  to find 3D reconstruction techniques for dynamic scene. As
+                  reconstruction of dynamic scene can be further categorized as
+                  rigid object 3D reconstruction and non-rigid object
+                  reconstruction based on the object being reconstructed in the
+                  dynamic scene. Thus we have searched for both categories for
+                  review and we have concentrated on the dynamic scene generated
+                  where object is dynamic while camera is static. Results: 281
+                  papers were initially searched further than after abstract
+                  screening 100 were selected later after detail study 46 were
+                  selected for systematic literature review and are presented in
+                  the table.}},
+                  keywords =     {}
+}
+
+
+@InProceedings{Rasouli_2019_ICCV,
+  author =       {Rasouli, Amir and Kotseruba, Iuliia and Kunic, Toni and
+                  Tsotsos, John K.},
+  title =        {PIE: A Large-Scale Dataset and Models for Pedestrian Intention
+                  Estimation and Trajectory Prediction},
+  booktitle =    {Proceedings of the IEEE/CVF International Conference on
+                  Computer Vision (ICCV)},
+  month =        {October},
+  year =         {2019}
+} 
+
+@article{10181234,
+  author =       {Golchoubian, Mahsa and Ghafurian, Moojan and Dautenhahn,
+                  Kerstin and Azad, Nasser Lashgarian},
+  journal =      {IEEE Transactions on Intelligent Transportation Systems},
+  title =        {Pedestrian Trajectory Prediction in Pedestrian-Vehicle Mixed
+                  Environments: A Systematic Review},
+  year =         {2023},
+  volume =       {24},
+  number =       {11},
+  pages =        {11544-11567},
+  keywords =     {Pedestrians;Trajectory;Predictive
+                  models;Roads;Systematics;Autonomous
+                  vehicles;Surveys;Pedestrian trajectory prediction;motion
+                  modelling;pedestrian-vehicle interaction;unstructured
+                  environment;shared space;systematic review;survey},
+  doi =          {10.1109/TITS.2023.3291196}
+}
+
+
 @article{park2021hypernerf,
   author =       {Park, Keunhong and Sinha, Utkarsh and Hedman, Peter and
                   Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and
