Summer SfM, NERF and LLM mapping

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,181 @@
+@article{FischerRAM2021,
+  title =        {A RoboStack Tutorial: Using the Robot Operating System
+                  Alongside the Conda and Jupyter Data Science Ecosystems},
+  author =       {Tobias Fischer and Wolf Vollprecht and Silvio Traversaro and
+                  Sean Yen and Carlos Herrero and Michael Milford},
+  journal =      {IEEE Robotics and Automation Magazine},
+  year =         2021,
+  doi =          {10.1109/MRA.2021.3128367},
+}
+
+@misc{mcleish2024transformersarithmeticrightembeddings,
+  title =        {Transformers Can Do Arithmetic with the Right Embeddings},
+  author =       {Sean McLeish and Arpit Bansal and Alex Stein and Neel Jain and
+                  John Kirchenbauer and Brian R. Bartoldson and Bhavya Kailkhura
+                  and Abhinav Bhatele and Jonas Geiping and Avi Schwarzschild
+                  and Tom Goldstein},
+  year =         2024,
+  eprint =       {2405.17399},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.LG},
+  url =          {https://arxiv.org/abs/2405.17399},
+}
+
+@inproceedings{lindenberger2021pixsfm,
+  author =       {Philipp Lindenberger and Paul-Edouard Sarlin and Viktor
+                  Larsson and Marc Pollefeys},
+  title =        {{Pixel-Perfect Structure-from-Motion with Featuremetric
+                  Refinement}},
+  booktitle =    {ICCV},
+  year =         2021,
+}
+
+@INPROCEEDINGS{9308211,
+  author =       {Asgharnia, Amirhossein and Schwartz, Howard M. and Atia,
+                  Mohamed},
+  booktitle =    {2020 IEEE Symposium Series on Computational Intelligence
+                  (SSCI)},
+  title =        {Deception in A Multi-agent Adversarial Game: The Game of
+                  Guarding Several Territories},
+  year =         2020,
+  pages =        {1321-1327},
+  keywords =     {Games;Takagi-Sugeno model;Genetic
+                  algorithms;Generators;Axles;Automobiles;Approximation
+                  algorithms;Multi-agent systems;Guarding a
+                  territory;Reinforcment learning;Genetic algorithm},
+  doi =          {10.1109/SSCI47803.2020.9308211}
+}
+
+@misc{yang2023survey,
+  title =        {LLM4Drive: A Survey of Large Language Models for Autonomous
+                  Driving},
+  author =       {Zhenjie Yang and Xiaosong Jia and Hongyang Li and Junchi Yan},
+  year =         {2023},
+  eprint =       {2311.01043},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.AI}
+}
+
+@inproceedings{8460485,
+  author =       {Hoang, Trong Nghia and Xiao, Yuchen and Sivakumar, Kavinayan
+                  and Amato, Christopher and Howl, Jonathan P.},
+  booktitle =    {2018 IEEE International Conference on Robotics and Automation
+                  (ICRA)},
+  title =        {Near-Optimal Adversarial Policy Switching for Decentralized
+                  Asynchronous Multi-Agent Systems},
+  year =         2018,
+  pages =        {6373-6380},
+  keywords =     {Switches;Planning;Task analysis;Robot kinematics;Probabilistic
+                  logic},
+  doi =          {10.1109/ICRA.2018.8460485}
+}
+
+@article{10.1016/j.neucom.2024.128162,
+  year =         2024,
+  title =        {{Ultra-fast semantic map perception model for autonomous
+                  driving}},
+  author =       {Xu, Zhenxing and Li, Sen and Peng, Liang and Jiang, Bo and
+                  Huang, Rui and Chen, Yongquan},
+  journal =      {Neurocomputing},
+  issn =         {0925-2312},
+  doi =          {10.1016/j.neucom.2024.128162},
+  abstract =     {{Autonomous driving relies on real-time perception of
+                  environmental semantic maps to make decisions, accurate and
+                  real-time perception of environmental semantics is crucial for
+                  safe navigation, as well as for efficient construction of
+                  high-definition maps in the backend. Our research found that
+                  when the output space of the semantic map perception model is
+                  an orthogonal projection subspace of the input perception
+                  space, it significantly improves the accuracy and real-time
+                  performance of map semantic segmentation while reducing
+                  learning pressure on deep network models. Based on this, we
+                  propose a simple yet efficient semantic map segmentation
+                  network that aims to achieve extremely fast speed and
+                  precision. Furthermore, we implement a semantic map fusion
+                  process using a Bayesian framework that promotes global
+                  semantic information accumulation in local semantics over time
+                  and space. Our experimental results demonstrate the
+                  superiority of our method, achieving state-of-the-art
+                  performance in network speed and mIoU metrics. At the same
+                  spatial resolution of semantic maps, our method reaches over
+                  350+ frames per second, which is at least 15 times faster than
+                  the previous state-of-the-art method. Code released at
+                  https://github.com/xzx-ai/MDSegMap.}},
+  pages =        128162,
+  local-url =
+                  {file://localhost/Users/hic/Documents/Papers%20Library/Xu-Ultra-fast%20semantic%20map%20perception%20model%20for%20autonomous%20driving-2024-Neurocomputing.pdf}
+}
+
+@misc{guo2024endtoendautonomousdrivingcostly,
+  title =        {End-to-End Autonomous Driving without Costly Modularization
+                  and 3D Manual Annotation},
+  author =       {Mingzhe Guo and Zhipeng Zhang and Yuan He and Ke Wang and
+                  Liping Jing},
+  year =         {2024},
+  eprint =       {2406.17680},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV},
+  url =          {https://arxiv.org/abs/2406.17680},
+}
+
+@article{9559998,
+  author =       {Gulzar, Mahir and Muhammad, Yar and Muhammad, Naveed},
+  journal =      {IEEE Access},
+  title =        {A Survey on Motion Prediction of Pedestrians and Vehicles for
+                  Autonomous Driving},
+  year =         2021,
+  volume =       9,
+  pages =        {137957-137969},
+  keywords =     {Roads;Predictive models;Trajectory;Taxonomy;Vehicle
+                  dynamics;Dynamics;Physics;Autonomous driving;road
+                  vehicles;roads;trajectory prediction;vehicle safety;human
+                  intention and behavior analysis},
+  doi =          {10.1109/ACCESS.2021.3118224}
+}
+
+
+@misc{he24:nerf-survey-ad,
+  year =         2024,
+  author =       {He, Lei and Li, Leheng and Sun, Wenchao and Han, Zeyu and Liu,
+                  Yichen and Zheng, Sifa and Wang, Jianqiang and Li, Keqiang},
+  title =        {{Neural Radiance Field in Autonomous Driving: A Survey}},
+  url =          {https://arxiv.org/abs/2404.13816},
+  abstract =     {{Neural Radiance Field (NeRF) has garnered significant
+                  attention from both academia and industry due to its intrinsic
+                  advantages, particularly its implicit representation and novel
+                  view synthesis capabilities. With the rapid advancements in
+                  deep learning, a multitude of methods have emerged to explore
+                  the potential applications of NeRF in the domain of Autonomous
+                  Driving (AD). However, a conspicuous void is apparent within
+                  the current literature. To bridge this gap, this paper
+                  conducts a comprehensive survey of NeRF's applications in the
+                  context of AD. Our survey is structured to categorize NeRF's
+                  applications in Autonomous Driving (AD), specifically
+                  encompassing perception, 3D reconstruction, simultaneous
+                  localization and mapping (SLAM), and simulation. We delve into
+                  in-depth analysis and summarize the findings for each
+                  application category, and conclude by providing insights and
+                  discussions on future directions in this field. We hope this
+                  paper serves as a comprehensive reference for researchers in
+                  this domain. To the best of our knowledge, this is the first
+                  survey specifically focused on the applications of NeRF in the
+                  Autonomous Driving domain.}},
+  urldate =      {2024-07-15},
+  note =         { },
+  month =        04
+}
+
+@misc{khan2024autosplatconstrainedgaussiansplatting,
+  title =        {AutoSplat: Constrained Gaussian Splatting for Autonomous
+                  Driving Scene Reconstruction},
+  author =       {Mustafa Khan and Hamidreza Fazlali and Dhruv Sharma and
+                  Tongtong Cao and Dongfeng Bai and Yuan Ren and Bingbing Liu},
+  year =         2024,
+  eprint =       {2407.02598},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV},
+  url =          {https://arxiv.org/abs/2407.02598},
+}
 
 @article{chib24:its-e2e,
   author =       {Chib, Pranav Singh and Singh, Pravendra},
