New FnT paper on soft robots

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,17 @@
+@article{ROB-082,
+  title =        {Developments and Trend Maps for Soft Continuum Manipulators
+                  and Soft Snake Robots},
+  author =       {V. S. Rajashekhar and Gowdham Prabhakar},
+  year =         2024,
+  volume =       12,
+  journal =      {Foundations and Trends® in Robotics},
+  issn =         {1935-8253},
+  number =       1,
+  pages =        {1-74},
+  url =          {http://dx.doi.org/10.1561/2300000082},
+  doi =          {10.1561/2300000082},
+}
+
 @article{FischerRAM2021,
   title =        {A RoboStack Tutorial: Using the Robot Operating System
                   Alongside the Conda and Jupyter Data Science Ecosystems},
