DCIST papers and MB study

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,69 @@
+@ARTICLE{10345724,
+  author =       {Liu, Wenhang and Hu, Jiawei and Zhang, Heng and Wang, Michael
+                  Yu and Xiong, Zhenhua},
+  journal =      {IEEE Transactions on Robotics},
+  title =        {A Novel Graph-Based Motion Planner of Multi-Mobile Robot
+                  Systems With Formation and Obstacle Constraints},
+  year =         2024,
+  volume =       40,
+  pages =        {714-728},
+  keywords =     {Robots;Planning;Task analysis;Mobile robots;Shape;Multi-robot
+                  systems;Collision avoidance;Formation constraints;motion
+                  planning;multi-mobile robot systems (MMRS);obstacle-rich
+                  environment},
+  doi =          {10.1109/TRO.2023.3339989}
+}
+
+@misc{prasanna2024perceptionmattersenhancingembodied,
+  title =        {Perception Matters: Enhancing Embodied AI with
+                  Uncertainty-Aware Semantic Segmentation},
+  author =       {Sai Prasanna and Daniel Honerkamp and Kshitij Sirohi and Tim
+                  Welschehold and Wolfram Burgard and Abhinav Valada},
+  year =         2024,
+  eprint =       {2408.02297},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.RO},
+  url =          {https://arxiv.org/abs/2408.02297},
+}
+
+@misc{tang2024deepreinforcementlearningrobotics,
+  title =        {Deep Reinforcement Learning for Robotics: A Survey of
+                  Real-World Successes},
+  author =       {Chen Tang and Ben Abbatematteo and Jiaheng Hu and Rohan
+                  Chandra and Roberto Martín-Martín and Peter Stone},
+  year =         2024,
+  eprint =       {2408.03539},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.RO},
+  url =          {https://arxiv.org/abs/2408.03539},
+}
+
+@misc{stone2022artificialintelligencelife2030,
+  title =        {Artificial Intelligence and Life in 2030: The One Hundred Year
+                  Study on Artificial Intelligence},
+  author =       {Peter Stone and Rodney Brooks and Erik Brynjolfsson and Ryan
+                  Calo and Oren Etzioni and Greg Hager and Julia Hirschberg and
+                  Shivaram Kalyanakrishnan and Ece Kamar and Sarit Kraus and
+                  Kevin Leyton-Brown and David Parkes and William Press and
+                  AnnaLee Saxenian and Julie Shah and Milind Tambe and Astro
+                  Teller},
+  year =         2022,
+  eprint =       {2211.06318},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CY},
+  url =          {https://arxiv.org/abs/2211.06318},
+}
+
+@misc{li2024nerfxl,
+  title =        {NeRF-XL: Scaling NeRFs with Multiple GPUs},
+  author =       {Ruilong Li and Sanja Fidler and Angjoo Kanazawa and Francis
+                  Williams},
+  year =         2024,
+  eprint =       {2404.16221},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV}
+}
+
 @article{ROB-082,
   title =        {Developments and Trend Maps for Soft Continuum Manipulators
                   and Soft Snake Robots},
