--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,52 @@
+@misc{yang2024guidinglonghorizontaskmotion,
+  title =        {Guiding Long-Horizon Task and Motion Planning with Vision
+                  Language Models},
+  author =       {Zhutian Yang and Caelan Garrett and Dieter Fox and Tomás
+                  Lozano-Pérez and Leslie Pack Kaelbling},
+  year =         {2024},
+  eprint =       {2410.02193},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.RO},
+  url =          {https://arxiv.org/abs/2410.02193},
+}
+
+@inproceedings{zhou2024feature,
+  title =        {Feature 3dgs: Supercharging 3d gaussian splatting to enable
+                  distilled feature fields},
+  author =       {Zhou, Shijie and Chang, Haoran and Jiang, Sicheng and Fan,
+                  Zhiwen and Zhu, Zehao and Xu, Dejia and Chari, Pradyumna and
+                  You, Suya and Wang, Zhangyang and Kadambi, Achuta},
+  booktitle =    {Proceedings of the IEEE/CVF Conference on Computer Vision and
+                  Pattern Recognition},
+  pages =        {21676--21685},
+  year =         2024
+}
+
+@article{cramariuc2022maplab,
+  title =        {{maplab 2.0 – A Modular and Multi-Modal Mapping Framework}},
+  author =       {A. Cramariuc and L. Bernreiter and F. Tschopp and M. Fehr and
+                  V. Reijgwart and J. Nieto and R. Siegwart and C. Cadena},
+  journal =      {IEEE Robotics and Automation Letters},
+  volume =       {8},
+  number =       {2},
+  pages =        {520-527},
+  year =         {2023},
+  doi =          {10.1109/LRA.2022.3227865}
+}
+
+@article{schneider2018maplab,
+  title =        {{maplab: An Open Framework for Research in Visual-inertial
+                  Mapping and Localization}},
+  author =       {T. Schneider and M. T. Dymczyk and M. Fehr and K. Egger and S.
+                  Lynen and I. Gilitschenski and R. Siegwart},
+  journal =      {IEEE Robotics and Automation Letters},
+  volume =       {3},
+  number =       {3},
+  pages =        {1418--1425},
+  year =         {2018},
+  doi =          {10.1109/LRA.2018.2800113}
+}
+
 @ARTICLE{10345724,
   author =       {Liu, Wenhang and Hu, Jiawei and Zhang, Heng and Wang, Michael
                   Yu and Xiong, Zhenhua},
