End of November - state estimation

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,61 @@
+@inproceedings{rtb,
+  title =        {Not your grandmother’s toolbox--the Robotics Toolbox
+                  reinvented for Python},
+  author =       {Corke, Peter and Haviland, Jesse},
+  booktitle =    {2021 IEEE International Conference on Robotics and Automation
+                  (ICRA)},
+  pages =        {11357--11363},
+  year =         {2021},
+  organization = {IEEE}
+}
+
+@misc{wang2024mctrackunified3dmultiobject,
+      title={MCTrack: A Unified 3D Multi-Object Tracking Framework for Autonomous Driving}, 
+      author={Xiyang Wang and Shouzheng Qi and Jieyou Zhao and Hangning Zhou and Siyu Zhang and Guoan Wang and Kai Tu and Songlin Guo and Jianbo Zhao and Jian Li and Mu Yang},
+      year={2024},
+      eprint={2409.16149},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2409.16149}, 
+}
+
+@misc{li2024unidriveuniversaldrivingperception,
+  title =        {UniDrive: Towards Universal Driving Perception Across Camera
+                  Configurations},
+  author =       {Ye Li and Wenzhao Zheng and Xiaonan Huang and Kurt Keutzer},
+  year =         {2024},
+  eprint =       {2410.13864},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV},
+  url =          {https://arxiv.org/abs/2410.13864},
+}
+
+@misc{choudhary2023talk2bevlanguageenhancedbirdseyeview,
+  title =        {Talk2BEV: Language-enhanced Bird's-eye View Maps for
+                  Autonomous Driving},
+  author =       {Tushar Choudhary and Vikrant Dewangan and Shivam Chandhok and
+                  Shubham Priyadarshan and Anushka Jain and Arun K. Singh and
+                  Siddharth Srivastava and Krishna Murthy Jatavallabhula and K.
+                  Madhava Krishna},
+  year =         {2023},
+  eprint =       {2310.02251},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV},
+  url =          {https://arxiv.org/abs/2310.02251},
+}
+
+@misc{roth2024viplannervisualsemanticimperative,
+  title =        {ViPlanner: Visual Semantic Imperative Learning for Local
+                  Navigation},
+  author =       {Pascal Roth and Julian Nubert and Fan Yang and Mayank Mittal
+                  and Marco Hutter},
+  year =         {2024},
+  eprint =       {2310.00982},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.RO},
+  url =          {https://arxiv.org/abs/2310.00982},
+}
+
 @misc{yang2024guidinglonghorizontaskmotion,
   title =        {Guiding Long-Horizon Task and Motion Planning with Vision
                   Language Models},
