--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,146 @@
+@misc{keysan2023texthappeningintegratingpretrained,
+  title =        {Can you text what is happening? Integrating pre-trained
+                  language encoders into trajectory prediction models for
+                  autonomous driving},
+  author =       {Ali Keysan and Andreas Look and Eitan Kosman and Gonca Gürsun
+                  and Jörg Wagner and Yu Yao and Barbara Rakitsch},
+  year =         {2023},
+  eprint =       {2309.05282},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV},
+  url =          {https://arxiv.org/abs/2309.05282},
+}
+
+@article{yang2025storm,
+  author =       {Jiawei Yang and Jiahui Huang and Yuxiao Chen and Yan Wang and
+                  Boyi Li and Yurong You and Maximilian Igl and Apoorva Sharma
+                  and Peter Karkus and Danfei Xu and Boris Ivanovic and Yue Wang
+                  and Marco Pavone},
+  title =        {STORM: Spatio-Temporal Reconstruction Model for Large-scale
+                  Outdoor Scenes},
+  journal =      {arXiv preprint arXiv:2501.00602},
+  year =         {2025}
+}
+
+@article{gu2407,
+  year =         2024,
+  title =        {{Accelerating Online Mapping and Behavior Prediction via
+                  Direct BEV Feature Attention}},
+  author =       {Gu, Xunjiang and Song, Guanyu and Gilitschenski, Igor and
+                  Pavone, Marco and Ivanovic, Boris},
+  journal =      {arXiv},
+  doi =          {10.48550/arxiv.2407.06683},
+  eprint =       {2407.06683},
+  abstract =     {{Understanding road geometry is a critical component of the
+                  autonomous vehicle (AV) stack. While high-definition (HD) maps
+                  can readily provide such information, they suffer from high
+                  labeling and maintenance costs. Accordingly, many recent works
+                  have proposed methods for estimating HD maps online from
+                  sensor data. The vast majority of recent approaches encode
+                  multi-camera observations into an intermediate representation,
+                  e.g., a bird's eye view (BEV) grid, and produce vector map
+                  elements via a decoder. While this architecture is performant,
+                  it decimates much of the information encoded in the
+                  intermediate representation, preventing downstream tasks
+                  (e.g., behavior prediction) from leveraging them. In this
+                  work, we propose exposing the rich internal features of online
+                  map estimation methods and show how they enable more tightly
+                  integrating online mapping with trajectory forecasting. In
+                  doing so, we find that directly accessing internal BEV
+                  features yields up to 73\% faster inference speeds and up to
+                  29\% more accurate predictions on the real-world nuScenes
+                  dataset.}}
+}
+
+
+@misc{ar2018cvlib,
+  author =       {Arun Ponnusamy},
+  title =        {cvlib - high level Computer Vision library for Python},
+  howpublished = {\url{https://github.com/arunponnusamy/cvlib}},
+  year =         2018
+}
+
+@INPROCEEDINGS{9341428,
+  author =       {Nägele, Ludwig and Hoffmann, Alwin and Schierl, Andreas and
+                  Reif, Wolfgang},
+  booktitle =    {2020 IEEE/RSJ International Conference on Intelligent Robots
+                  and Systems (IROS)},
+  title =        {LegoBot: Automated Planning for Coordinated Multi-Robot
+                  Assembly of LEGO structures},
+  year =         2020,
+  pages =        {9088-9095},
+  keywords =     {Robotic assembly;Solid modeling;Three-dimensional
+                  displays;Robot kinematics;Programming;Production
+                  facilities;Planning},
+  doi =          {10.1109/IROS45743.2020.9341428}
+}
+
+
+@article{SU2025117,
+  title =        {Improving generative trajectory prediction via collision-free
+                  modeling and goal scene reconstruction},
+  journal =      {Pattern Recognition Letters},
+  volume =       188,
+  pages =        {117-124},
+  year =         2025,
+  issn =         {0167-8655},
+  doi =          {https://doi.org/10.1016/j.patrec.2024.12.004},
+  url =
+                  {https://www.sciencedirect.com/science/article/pii/S0167865524003593},
+  author =       {Zhaoxin Su and Gang Huang and Zhou Zhou and Yongfu Li and
+                  Sanyuan Zhang and Wei Hua},
+  keywords =     {Trajectory prediction, Collision-free modeling, Goal scene
+                  reconstruction, Attention mechanism},
+  abstract =     {In the context of bird’s-eye view traffic scenarios, accurate
+                  prediction of future trajectories for various traffic agents
+                  (e.g., pedestrians, vehicles) is crucial for driving safety
+                  and decision planning. In this paper, we present a generative
+                  trajectory prediction framework that incorporates both
+                  collision-free modeling and additional reconstruction for
+                  future scene context. For the social encoder, we leverage the
+                  collision prior by incorporating collision-free constraints
+                  (CFC). We construct a social model composed of multiple
+                  graphs, where each graph points to the collision prior
+                  calculated from uniform direction sampling. In the scene
+                  encoder, we employ an attention module to establish
+                  connections between trajectory motion and all scene image
+                  pixels. Additionally, we reconstruct a goal response map (GRM)
+                  aligned with the intended one, thereby enhancing the scene
+                  representations. Experiments conducted on nuScenes and ETH/UCY
+                  datasets demonstrate the superiority of the proposed
+                  framework, achieving a 13.8% reduction in off-road rate on
+                  nuScenes and an average 13.2% reduction in collision rate on
+                  ETH/UCY datasets.}
+}
+
+@misc{zheng2024gaussianadgaussiancentricendtoendautonomous,
+  title =        {GaussianAD: Gaussian-Centric End-to-End Autonomous Driving},
+  author =       {Wenzhao Zheng and Junjie Wu and Yao Zheng and Sicheng Zuo and
+                  Zixun Xie and Longchao Yang and Yong Pan and Zhihui Hao and
+                  Peng Jia and Xianpeng Lang and Shanghang Zhang},
+  year =         {2024},
+  eprint =       {2412.10371},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV},
+  url =          {https://arxiv.org/abs/2412.10371},
+}
+
+@InProceedings{raheema24,
+  author =       {Raheema, Julian and Hess, Michael and Provost, Raymond C and
+                  Bilinski, Mark and Christensen, Henrik Iskov},
+  title =        {Autonomous Exploration and Mapping Payload Integrated on a
+                  Quadruped Robot},
+  booktitle =    {International Symposium on Robotics Research},
+  year =         2024,
+  series =       {SPAR},
+  pages =        { },
+  month =        {Dec},
+  address =      {Long Beach, CA},
+  organization = {IFRR},
+  publisher =    {Springer Verlag}
+}
+
+
 @inproceedings{rtb,
   title =        {Not your grandmother’s toolbox--the Robotics Toolbox
                   reinvented for Python},
@@ -10,13 +153,16 @@
 }
 
 @misc{wang2024mctrackunified3dmultiobject,
-      title={MCTrack: A Unified 3D Multi-Object Tracking Framework for Autonomous Driving}, 
-      author={Xiyang Wang and Shouzheng Qi and Jieyou Zhao and Hangning Zhou and Siyu Zhang and Guoan Wang and Kai Tu and Songlin Guo and Jianbo Zhao and Jian Li and Mu Yang},
-      year={2024},
-      eprint={2409.16149},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV},
-      url={https://arxiv.org/abs/2409.16149}, 
+  title =        {MCTrack: A Unified 3D Multi-Object Tracking Framework for
+                  Autonomous Driving},
+  author =       {Xiyang Wang and Shouzheng Qi and Jieyou Zhao and Hangning Zhou
+                  and Siyu Zhang and Guoan Wang and Kai Tu and Songlin Guo and
+                  Jianbo Zhao and Jian Li and Mu Yang},
+  year =         2024,
+  eprint =       {2409.16149},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV},
+  url =          {https://arxiv.org/abs/2409.16149},
 }
 
 @misc{li2024unidriveuniversaldrivingperception,
