CVPR picking challenge

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,16 @@
+@InProceedings{Kalra_2024_CVPR,
+  author =       {Kalra, Agastya and Stoppi, Guy and Marin, Dmitrii and
+                  Taamazyan, Vage and Shandilya, Aarrushi and Agarwal, Rishav
+                  and Boykov, Anton and Chong, Tze Hao and Stark, Michael},
+  title =        {Towards Co-Evaluation of Cameras HDR and Algorithms for
+                  Industrial-Grade 6DoF Pose Estimation},
+  booktitle =    {Proceedings of the IEEE/CVF Conference on Computer Vision and
+                  Pattern Recognition (CVPR)},
+  month =        {June},
+  year =         2024,
+  pages =        {22691-22701}
+}
+
 @misc{keysan2023texthappeningintegratingpretrained,
   title =        {Can you text what is happening? Integrating pre-trained
                   language encoders into trajectory prediction models for
