Update based on AVL Journal Club

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,52 @@
+@misc{chen2024omnireomniurbanscene,
+  title =        {OmniRe: Omni Urban Scene Reconstruction},
+  author =       {Ziyu Chen and Jiawei Yang and Jiahui Huang and Riccardo de
+                  Lutio and Janick Martinez Esturo and Boris Ivanovic and Or
+                  Litany and Zan Gojcic and Sanja Fidler and Marco Pavone and Li
+                  Song and Yue Wang},
+  year =         {2024},
+  eprint =       {2408.16760},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV},
+  url =          {https://arxiv.org/abs/2408.16760},
+}
+
+@misc{yuan2024ragdrivergeneralisabledrivingexplanations,
+  title =        {RAG-Driver: Generalisable Driving Explanations with
+                  Retrieval-Augmented In-Context Learning in Multi-Modal Large
+                  Language Model},
+  author =       {Jianhao Yuan and Shuyang Sun and Daniel Omeiza and Bo Zhao and
+                  Paul Newman and Lars Kunze and Matthew Gadd},
+  year =         {2024},
+  eprint =       {2402.10828},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.RO},
+  url =          {https://arxiv.org/abs/2402.10828},
+}
+
+@misc{huang2024trainingopenvocabularymonocular3d,
+  title =        {Training an Open-Vocabulary Monocular 3D Object Detection
+                  Model without 3D Data},
+  author =       {Rui Huang and Henry Zheng and Yan Wang and Zhuofan Xia and
+                  Marco Pavone and Gao Huang},
+  year =         {2024},
+  eprint =       {2411.15657},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV},
+  url =          {https://arxiv.org/abs/2411.15657},
+}
+
+@misc{mao2024languageagentautonomousdriving,
+  title =        {A Language Agent for Autonomous Driving},
+  author =       {Jiageng Mao and Junjie Ye and Yuxi Qian and Marco Pavone and
+                  Yue Wang},
+  year =         {2024},
+  eprint =       {2311.10813},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV},
+  url =          {https://arxiv.org/abs/2311.10813},
+}
+
 @InProceedings{Kalra_2024_CVPR,
   author =       {Kalra, Agastya and Stoppi, Guy and Marin, Dmitrii and
                   Taamazyan, Vage and Shandilya, Aarrushi and Agarwal, Rishav
