--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,13 @@
+@misc{peyré2025mathematicsartificialintelligence,
+  title =        {The Mathematics of Artificial Intelligence},
+  author =       {Gabriel Peyré},
+  year =         {2025},
+  eprint =       {2501.10465},
+  archivePrefix ={arXiv},
+  primaryClass = {math.OC},
+  url =          {https://arxiv.org/abs/2501.10465},
+}
+
 @misc{chen2024omnireomniurbanscene,
   title =        {OmniRe: Omni Urban Scene Reconstruction},
   author =       {Ziyu Chen and Jiawei Yang and Jiahui Huang and Riccardo de
