--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,11 @@
+@book{bach2024learning,
+  title =        {Learning theory from first principles},
+  author =       {Bach, Francis},
+  publisher =    {MIT Press},
+  address =      {Boston, MA},
+  year =         2024,
+}
+
 @misc{peyré2025mathematicsartificialintelligence,
   title =        {The Mathematics of Artificial Intelligence},
   author =       {Gabriel Peyré},
@@ -1968,10 +1976,10 @@
 }
 
 @Book{		  abidi_data_1992,
-  address =      {New York, N.Y.},
   title =        {Data {Fusion} in {Robotics} and {Machine} {Intelligence}},
-  publisher =    {Academic Press},
   editor =       {Abidi, M. A. and Gonzalez, R. C.},
+  publisher =    {Academic Press},
+  address =      {New York, N.Y.},
   year =         1992
 }
 
