AVL Journal Club - dynamic scene modeling

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,7 +1,32 @@
+@misc{ding2024realgenretrievalaugmentedgeneration,
+  title =        {RealGen: Retrieval Augmented Generation for Controllable
+                  Traffic Scenarios},
+  author =       {Wenhao Ding and Yulong Cao and Ding Zhao and Chaowei Xiao and
+                  Marco Pavone},
+  year =         {2024},
+  eprint =       {2312.13303},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.LG},
+  url =          {https://arxiv.org/abs/2312.13303},
+}
+
+@misc{chen2024omnireomniurbanscene,
+  title =        {OmniRe: Omni Urban Scene Reconstruction},
+  author =       {Ziyu Chen and Jiawei Yang and Jiahui Huang and Riccardo de
+                  Lutio and Janick Martinez Esturo and Boris Ivanovic and Or
+                  Litany and Zan Gojcic and Sanja Fidler and Marco Pavone and Li
+                  Song and Yue Wang},
+  year =         {2024},
+  eprint =       {2408.16760},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV},
+  url =          {https://arxiv.org/abs/2408.16760},
+}
+
 @book{oakley2021uncommon,
   title =        {Uncommon sense teaching: Practical insights in brain science
                   to help students learn},
-  author =       {Oakley, Barbara and Sejnowski, Terrence J},
+  author =       {Oakley, Barbara and Rogowsky, Beth and Sejnowski, Terrence J},
   year =         {2021},
   publisher =    {Penguin}
 }
